[gd_scene load_steps=11 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://ant.png" type="Texture" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://gamemanager.gd" type="Script" id=4]
[ext_resource path="res://eggScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://peg.png" type="Texture" id=6]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.7029, 38.4418 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[node name="Node2D" type="Node2D"]

[node name="PlayerIGuess" type="Area2D" parent="."]
position = Vector2( 484.208, 550.279 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerIGuess"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="PlayerIGuess"]
texture = ExtResource( 2 )

[node name="EggSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GM" type="Node" parent="."]
script = ExtResource( 4 )
eggScene = ExtResource( 5 )

[node name="HUD" type="CanvasLayer" parent="GM"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="GM/HUD"]
margin_right = 100.0
margin_bottom = 50.0
rect_scale = Vector2( 0.964145, 0.993442 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="GM/HUD"]
margin_left = 916.735
margin_top = 5.34539
margin_right = 1016.73
margin_bottom = 83.3454
rect_scale = Vector2( 0.964145, 0.993442 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllPegs" type="Node" parent="."]

[node name="Peg" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 347.451, 314.487 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg"]
shape = SubResource( 3 )

[node name="Peg3" type="RigidBody2D" parent="AllPegs"]
position = Vector2( -1.78176, 192.434 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg3"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg3"]
shape = SubResource( 3 )

[node name="Peg4" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 87.3081, 327.851 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg4"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg4"]
shape = SubResource( 3 )

[node name="Peg5" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 462.376, 196.889 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg5"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg5"]
shape = SubResource( 3 )

[node name="Peg6" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 633.429, 247.67 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg6"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg6"]
shape = SubResource( 3 )

[node name="Peg7" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 813.391, 134.526 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg7"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg7"]
shape = SubResource( 3 )

[node name="Peg8" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 1016.52, 244.997 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg8"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg8"]
shape = SubResource( 3 )

[node name="Peg9" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 750.137, 364.378 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg9"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg9"]
shape = SubResource( 3 )

[node name="Peg10" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 522.067, 369.723 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg10"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg10"]
shape = SubResource( 3 )

[node name="Peg11" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 623.629, 95.3261 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg11"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg11"]
shape = SubResource( 3 )

[node name="Peg13" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 270.833, 154.125 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg13"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg13"]
shape = SubResource( 3 )

[node name="Peg14" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 244.997, 427.631 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg14"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg14"]
shape = SubResource( 3 )

[node name="Peg15" type="RigidBody2D" parent="AllPegs"]
position = Vector2( 880.208, 435.649 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="AllPegs/Peg15"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPegs/Peg15"]
shape = SubResource( 3 )

[node name="Seconds" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="PlayerIGuess" to="PlayerIGuess" method="_on_PlayerIGuess_body_entered"]
[connection signal="body_entered" from="PlayerIGuess" to="GM" method="_on_PlayerIGuess_body_entered"]
[connection signal="timeout" from="EggSpawnTimer" to="GM" method="_on_EggSpawnTimer_timeout"]
[connection signal="timeout" from="Seconds" to="GM" method="_on_Seconds_timeout"]
